# polar_codes

./: .clang-format
C/SCD/: CMakeLists.txt  SCD_simulate.c  functions_SCD.c  functions_SCD.h  tree_decode.c  tree_decode.h  tree_encode.c  tree_encode.h  utils.c
C/SSCD/: CMakeLists.txt  SSCD_simulate.c  functions_SSCD.c  functions_SSCD.h
